[build-system]
requires = ["setuptools>=45.0", "setuptools_scm[toml]>=6.3.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydaq"
version = "0.0.1"
license = { file = "LICENSE" }
requires-python = ">=3.7"
keywords = ["Python", "Data Acquisition", "Arduino", "NIDAQ"]
authors = [
  { name="Samir Angelo Milani Martins", email="milani.martins@gmail.com" },
]
description = "A Python Package for Data Acquisition and Experimental Analysis with Graphical User Interface"
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Research",
    "Intended Audience :: Engineering",
    "Intended Audience :: Modelling",
    "Intended Audience :: Modeling",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",

]

[project.urls]
homepage = "https://github.com/samirmartins/pydaq"
repository = "https://github.com/samirmartins/pydaq"
documentation = "https://samirmartins.github.io/pydaq/"

[tool.setuptools]
packages = ["pydaq"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


