[build-system]
requires = ["setuptools>=45.0", "setuptools_scm[toml]>=6.3.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydaq"
version = "0.0.5.1"
license = { file = "LICENSE" }
requires-python = ">=3.7"
keywords = ["Python", "Data Acquisition", "Arduino", "NIDAQ"]
authors = [
  { name="Samir Angelo Milani Martins", email="milani.martins@gmail.com" },
]
description = "Data Acquisition and Experimental Analysis with Python"
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",

] 
dependencies = ["numpy", "nidaqmx", "matplotlib",
    "pyserial", "packaging", "PySide6",
    "PySide6_Addons", "PySide6_Essentials", "shiboken6", "sysidentpy==0.3.4", "bitarray", "scipy"]

[project.urls]
homepage = "https://pydaq.org/"
repository = "https://github.com/samirmartins/pydaq"
documentation = "https://pydaq.org/"

[tool.setuptools]
packages = ["pydaq"]



